# Reversi-ClientCode

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.h  Client.cpp  Client.h  Console.cpp  Console.h  GameFlow.cpp  GameFlow.h  GeneralPlayer.h  HumanP.cpp  HumanP.h  LocalPlayer.cpp  LocalPlayer.h  Point.h  README  RemotePlayer.cpp  RemotePlayer.h  ReversiRules.cpp  ReversiRules.h  Visualization.h  info.txt  main.cpp  makefile  seperateLogEx4  updatedLog.txt
Tests/: Test_AIPlayer.cpp  Test_Board.cpp  Test_HumanP.cpp  Test_ReversiRules.cpp  gtest_main.cpp
include/: AIPlayer.h  Board.h  Cell.h  Client.h  Console.h  GameFlow.h  GeneralPlayer.h  HumanP.h  LocalPlayer.h  RemotePlayer.h  ReversiRules.h  Visualization.h
src/: AIPlayer.cpp  Board.cpp  Client.cpp  Console.cpp  GameFlow.cpp  HumanP.cpp  LocalPlayer.cpp  RemotePlayer.cpp  ReversiRules.cpp  main.cpp
